--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Kripa Shankar <Krips.dhn@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Kripadhn/KripaProfile"
+    "url": "https://github.com/Kripadhn/Kripa_Profile.github.io"
   },
   "keywords": [
     "gatsby"
