package json URL changes
package json URL changes

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Kripa Shankar <Krips.dhn@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Kripadhn/KripaProfile"
+    "url": "https://github.com/Kripadhn/Kripa_Profile.github.io"
   },
+  "homepage": "https://kripadhn.github.io/Kripa_Profile.github.io/",
   "keywords": [
     "gatsby"
   ],
